--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,10 +19,17 @@ jobs:
         uses: browser-actions/setup-chrome@latest
 
       - name: Chrome version
-        run: |
-          VERSION_STRING="99.0.4844.51"
-          wget "https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_${VERSION_STRING}_amd64.deb"
-          sudo dpkg -i "google-chrome-stable_${VERSION_STRING}_amd64.deb"
+        run: chrome --version
+
+      - uses: actions/checkout@v2
+
+      - uses: nanasess/setup-chromedriver@v1
+        with:
+            chromedriver-version: '88.0.4324.96'
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - uses: actions/checkout@v3
 
