--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: nanasess/setup-chromedriver@v1
         with:
           # Optional: do not specify to match Chrome's version
-          chromedriver-version: '88.0.4324.96'
+          chromedriver-version: '99.0.4844.35'
       - run: |
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
@@ -38,7 +38,7 @@ jobs:
           google-chrome --version
 
       - name: Setup chrome browser
-        uses: browser-actions/setup-chrome@99.0.4844.51
+        uses: browser-actions/setup-chrome@latest
 
       - name: Chrome version
         run: chrome --version
