--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           # Optional: do not specify to match Chrome's version
           chromedriver-version: "102.0.5005.27"
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=http://localhost:9516/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+          chromedriver --version
 
       - name: Setup chrome browser
         uses: browser-actions/setup-chrome@latest
