--- a/package.json
+++ b/package.json
@@ -88,9 +88,7 @@
     "@wdio/cucumber-framework": "^7.19.1",
     "@wdio/local-runner": "^7.19.5",
     "@wdio/sauce-service": "^7.19.1",
-    "@wdio/selenium-standalone-service": "^7.16.16",
     "@wdio/spec-reporter": "^7.19.5",
-    "@wdio/static-server-service": "^7.16.14",
     "assert": "2.0.0",
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
@@ -119,9 +117,8 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "util": "0.12.4",
-    "wdio-chromedriver-service":"^7.3.2",
+    "wdio-chromedriver-service": "7.3.2",
     "wdio-cucumberjs-json-reporter": "^4.4.1",
-    "wdio-geckodriver-service": "^2.1.0",
     "wdio-json-reporter": "^3.0.0",
     "webdriverio": "^7.16.16",
     "webpack": "^5.72.0"
