--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
     "chai": "^4.3.6",
-    "chromedriver": "^99.0.0",
+    "chromedriver": "101.0.0",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
     "eslint-config-prettier": "8.5.0",
