--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
   "liveshare.launcherClient": "visualStudioCode",
-  "cucumberautocomplete.steps": [
-    "./test/step-definitions/*.ts",
-    "./test/steps/*.ts"
-  ],
+  "cucumberautocomplete.steps": ["./test/steps/*.ts"],
   "cucumberautocomplete.syncfeatures": "./test/features/**/*.feature",
   "cucumberautocomplete.strictGherkinCompletion": true
 }
