--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build-storybook": "build-storybook -s public",
     "build:example": "export EXAMPLE_BUILD=1 && craco build",
     "build": "craco build",
+    "clear": "rm -rf node_modules build allure-results",
     "dev": "craco start",
     "eject": "craco eject",
     "format:examples": "prettier --write ./examples/MultipassDemo/src",
@@ -64,15 +65,15 @@
     "@commitlint/config-conventional": "16.2.4",
     "@craco/craco": "6.4.3",
     "@internet-identity-labs/nfid-ui-kit-core": "0.0.1-alpha.3",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/node-logger": "^6.4.22",
+    "@storybook/addon-actions": "^6.5.0-beta.3",
+    "@storybook/addon-essentials": "^6.5.0-beta.3",
+    "@storybook/addon-interactions": "^6.5.0-beta.3",
+    "@storybook/addon-links": "^6.5.0-beta.3",
+    "@storybook/builder-webpack5": "^6.5.0-beta.3",
+    "@storybook/manager-webpack5": "^6.5.0-beta.3",
+    "@storybook/node-logger": "^6.5.0-beta.3",
     "@storybook/preset-create-react-app": "^4.1.0",
-    "@storybook/react": "^6.4.22",
+    "@storybook/react": "^6.5.0-beta.3",
     "@storybook/testing-library": "^0.0.11",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
@@ -114,7 +115,7 @@
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
-    "storybook": "6.4.22",
+    "storybook": "6.5.0-beta.3",
     "tailwindcss": "3.0.24",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
