--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
     "chai": "^4.3.6",
-    "chromedriver": "^99.0.0",
+    "chromedriver": "101.0.0",
+    "cross-env": "7.0.3",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
     "eslint": "8.12.0",
