--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s public",
     "test:dev": "craco test",
-    "test:e2e": "wdio run wdio.conf.ts",
+    "test:e2e": "wdio run wdio.conf.ts --cucumberOpts.tagExpression",
     "test:e2e:debug": "cross-env DEBUG=true wdio run wdio.conf.ts --inspect",
     "test": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles",
     "tunnel": "./scripts/tunnel.sh"
