--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
           # On main branch build on ic
           if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
             dfx identity use action
-            dfx deploy --network ic  --no-wallet
+            dfx deploy --network ic nfid-frontend --no-wallet
           fi
 
         env:
