--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -49,7 +49,7 @@ jobs:
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
 
       - name: Running E2E test
-        run: npx wdio wdio.conf.ts "@runOnly"
+        run: npx wdio wdio.conf.ts "@runOnlyonce"
 
       - name: Shut down
         run: dfx stop
