--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@dfinity/principal": "0.9.3",
     "@headlessui/react": "1.5.0",
     "@internet-identity-labs/nfid-sdk-react": "0.0.1-alpha.18",
+    "@sentry/react": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "@tailwindcss/forms": "^0.5.0",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
