--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "borc": "3.0.0",
     "bowser": "^2.11.0",
     "clsx": "1.1.1",
+    "date-fns": "^2.28.0",
     "geckodriver": "^3.0.1",
     "immer": "9.0.12",
     "jotai": "1.6.4",
