--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.0.5",
     "react-scrollspy": "^3.4.3",
+    "react-tooltip": "^4.2.21",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js",
@@ -85,6 +86,7 @@
     "@types/react": "^17.0.42",
     "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "6.1.5",
+    "@types/react-tooltip": "^4.2.4",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
