--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -50,7 +50,7 @@ jobs:
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
 
       - name: Running E2E test
-        run: npx wdio wdio.conf.ts --cucumberOpts.tagExpression='@recoverNFIDOne'
+        run: npx wdio wdio.conf.ts --cucumberOpts.tagExpression='@reg'
 
       - name: Shut down
         run: dfx stop
