--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: INSTALL NVM VERSION
         shell: bash -l {0}
-        run: nvm install 17.9.0 | echo nvm version
+        run: nvm install 17.9.0 && nvm use 17.9.0
 
       - name: MULTIPASS FRONTEND | install & tests
         run: |
