--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "process": "0.11.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-helmet": "6.1.0",
+    "react-helmet-async": "1.3.0",
     "react-hook-form": "7.28.1",
     "react-icons": "^4.3.1",
     "react-parallax-tilt": "^1.6.7",
