--- a/.env.local.template
+++ b/.env.local.template
@@ -6,6 +6,7 @@ II_MODE=development
 
 TUNNEL_DOMAIN=YOUR_NGROK_PREFIX.eu.ngrok.io
 AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
+AWS_SIGNIN_GOOGLE=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/signin/
 
 INTERNET_IDENTITY_CANISTER_ID_LOCAL=
 IDENTITY_MANAGER_CANISTER_ID_LOCAL=
