--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -33,5 +33,6 @@ jobs:
           PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
           INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
           IM_ADDITION_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_IM_ADDITION}}
-          AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
+          AWS_VERIFY_PHONENUMBER: ${{secrets.PROD_AWS_VERIFY_PHONENUMBER}}
+          AWS_SIGNIN_GOOGLE: ${{secrets.AWS_SIGNIN_GOOGLE}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
