--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
+    "@types/google-one-tap": "^1.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.29",
     "@types/react": "^17.0.42",
