--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "xstate": "4.32.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.17.12",
@@ -72,16 +73,16 @@
     "@commitlint/config-conventional": "16.2.4",
     "@craco/craco": "6.4.3",
     "@internet-identity-labs/nfid-ui-kit-core": "0.0.1-alpha.3",
-    "@storybook/addon-actions": "^6.5.0-beta.3",
-    "@storybook/addon-essentials": "^6.5.0-beta.3",
-    "@storybook/addon-interactions": "^6.5.0-beta.3",
-    "@storybook/addon-links": "^6.5.0-beta.3",
-    "@storybook/builder-webpack5": "^6.5.0-beta.3",
-    "@storybook/manager-webpack5": "^6.5.0-beta.3",
-    "@storybook/node-logger": "^6.5.0-beta.3",
-    "@storybook/preset-create-react-app": "^4.1.0",
-    "@storybook/react": "^6.5.0-beta.3",
-    "@storybook/testing-library": "^0.0.11",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/node-logger": "^6.5.9",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
     "@types/google-one-tap": "^1.2.0",
@@ -125,7 +126,7 @@
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
-    "storybook": "6.5.0-beta.3",
+    "storybook": "6.5.9",
     "tailwindcss": "3.0.24",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
