--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "stickyfilljs": "^2.1.0",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
-    "swr": "1.3.0",
+    "swr": "^1.3.0",
+    "tweetnacl-util": "^0.15.1",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js#v1.0.3",
     "uuid": "8.3.2",
     "xstate": "^4.32.1"
