--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
+    "@xstate/react": "^3.0.0",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
@@ -64,7 +65,8 @@
     "stickyfilljs": "^2.1.0",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
-    "swr": "1.3.0",
+    "swr": "^1.3.0",
+    "tweetnacl-util": "^0.15.1",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js#v1.0.3",
     "uuid": "8.3.2",
     "xstate": "4.32.1"
