--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
+    "@xstate/react": "^3.0.0",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
@@ -67,7 +68,7 @@
     "swr": "1.3.0",
     "usergeek-ic-js": "git+https://github.com/usergeek/usergeek-ic-js#v1.0.3",
     "uuid": "8.3.2",
-    "xstate": "4.32.1"
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.17.12",
