--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "jotai": "1.6.4",
     "process": "0.11.10",
     "react": "18.0.0",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "18.0.0",
     "react-helmet-async": "1.3.0",
     "react-hook-form": "7.28.1",
     "react-icons": "^4.3.1",
     "react-parallax-tilt": "^1.6.7",
-    "react-reveal": "^1.2.2",
     "react-router": "6.2.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
