--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-scrollspy": "^3.4.3",
     "react-tooltip": "^4.2.21",
     "react-verification-code-input": "^1.2.9",
+    "rxjs": "^7.5.6",
     "stickyfilljs": "^2.1.0",
     "stream-browserify": "3.0.0",
     "swiper": "^8.0.7",
