--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "generate:types": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t ts > frontend/generated/identity_manager.d.ts",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s public",
-    "test:dev": "craco test",
+    "test:dev": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles --watch",
     "test:e2e": "wdio run wdio.conf.ts",
     "test:e2e:debug": "cross-env DEBUG=true wdio run wdio.conf.ts --inspect",
     "test": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles",
