--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,40 +67,40 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      # - name: Run install, build and serve for e2e
-      #   run: |
-      #     yarn
-      #     yarn build
-      #     yarn serve -l 9090 -s build &
-      #   env:
-      #     FRONTEND_MODE: production
-      #     BACKEND_MODE: DEV
-      #     IS_DEV: true
-      #     II_MODE: production
-      #     IC_HOST: https://ic0.app
-      #     DFX_NETWORK: dev
-      #     CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
-      #     IS_E2E_TEST: true
+      - name: Run install, build and serve for e2e
+        run: |
+          yarn
+          yarn build
+          yarn serve -l 9090 -s build &
+        env:
+          FRONTEND_MODE: production
+          BACKEND_MODE: DEV
+          IS_DEV: true
+          II_MODE: production
+          IC_HOST: https://ic0.app
+          DFX_NETWORK: dev
+          CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
+          IS_E2E_TEST: true
 
-      #     REACT_APP_SENTRY_CONNECTION: ${{secrets.DEV_SENTRY_CONNECTION}}
-      #     IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
-      #     PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_PUB_SUB_CHANNEL}}
-      #     VERIFIER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_VERIFIER}}
-      #     LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
-      #     CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
-      #     INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_INTERNET_IDENTITY}}
-      #     AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
-      #     AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
-      #     GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
-      #     USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+          REACT_APP_SENTRY_CONNECTION: ${{secrets.DEV_SENTRY_CONNECTION}}
+          IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
+          PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_PUB_SUB_CHANNEL}}
+          VERIFIER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_VERIFIER}}
+          LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
+          CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
+          INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_INTERNET_IDENTITY}}
+          AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
+          AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
+          GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
+          USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
 
-      #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-      #     SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-      #     SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
-      #     SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
+          SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
 
-      # - name: Running unit tests
-      #   run: yarn test
+      - name: Running unit tests
+        run: yarn test
 
       - name: Checkout Google user E2E
         uses: actions/checkout@v3
@@ -116,12 +116,12 @@ jobs:
           cp -R './userGoogleE2E/Profile 1' ~/user-google-e2e
           ls -la ~/user-google-e2e
 
-      # - name: Running E2E test
-      #   run: yarn test:e2e
-      #   env:
-      #     URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
-      #     USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
-      #     PROFILE_DIRECTORY: ${{secrets.PROFILE_DIRECTORY}}
+      - name: Running E2E test
+        run: yarn test:e2e
+        env:
+          URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
+          USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
+          PROFILE_DIRECTORY: ${{secrets.PROFILE_DIRECTORY}}
 
       # - name: Generate HTML Report
       #   if: always()
