--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -98,8 +98,8 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
           SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
 
-      # - name: Running unit tests
-      #   run: yarn test
+      - name: Running unit tests
+        run: yarn test
 
       - name: Checkout Google user E2E
         uses: actions/checkout@v3
@@ -115,13 +115,13 @@ jobs:
           URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
           USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
 
-      # - name: Generate HTML Report
-      #   if: always()
-      #   run: yarn generate-cucumber-html-report
+      - name: Generate HTML Report
+        if: always()
+        run: yarn generate-cucumber-html-report
 
-      # - name: Final Test Reports
-      #   uses: actions/upload-artifact@v2
-      #   if: always()
-      #   with:
-      #     name: wdio-report
-      #     path: test/reporter
+      - name: Final Test Reports
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: wdio-report
+          path: test/reporter
