--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:dev": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles --watch",
     "test:dev:silent": "yarn test:dev --silent=true",
     "test:e2e": "wdio run wdio.conf.ts",
+    "test:e2e:mobile": "wdio run wdio.mobile.conf.ts",
     "test:e2e:debug": "cross-env DEBUG=true wdio run wdio.conf.ts --inspect",
     "test": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles --silent=true",
     "tunnel": "./scripts/tunnel.sh"
