--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -98,8 +98,8 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
           SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
 
-      # - name: Running unit tests
-      #   run: yarn test
+      - name: Running unit tests
+        run: yarn test
 
       - name: Checkout Google user E2E
         uses: actions/checkout@v3
