--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "@wdio/cli": "7.23.0",
     "@wdio/config": "7.23.0",
     "@wdio/cucumber-framework": "7.23.0",
-    "@wdio/devtools-service": "7.23.0",
+    "@wdio/devtools-service": "7.24.0",
     "@wdio/local-runner": "7.23.0",
     "@wdio/sauce-service": "7.23.0",
     "@wdio/selenium-standalone-service": "7.23.0",
@@ -144,6 +144,7 @@
     "husky": "7.0.4",
     "jest": "^27.1.5",
     "jest-circus": "^27.1.5",
+    "node-fetch": "2.6.1",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
@@ -162,8 +163,7 @@
     "wdio-json-reporter": "3.0.0",
     "webdriverio": "7.23.0",
     "webpack": "^5.72.0",
-    "whatwg-fetch": "3.6.2",
-    "node-fetch": "2.6.1"
+    "whatwg-fetch": "3.6.2"
   },
   "eslintConfig": {
     "extends": "react-app",
