--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@dfinity/identity": "0.10.4",
     "@dfinity/principal": "0.10.4",
     "@headlessui/react": "1.5.0",
-    "@internet-identity-labs/nfid-sdk-react": "0.0.1-alpha.18",
     "@nfid/credentials": "1.1.0",
     "@sentry/react": "7.8.0",
     "@sentry/tracing": "7.8.0",
@@ -63,6 +62,7 @@
     "jotai": "1.6.4",
     "lodash": "^4.17.21",
     "process": "0.11.10",
+    "qrcode": "1.5.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "18.0.0",
