--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,6 +44,7 @@ jobs:
           AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
           AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
           URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
+          LAMBDA_IDENTITY: ${{secrets.LAMBDA_IDENTITY}}
           GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
 
@@ -115,6 +116,7 @@ jobs:
           # yarn test:e2e:mobile
         env:
           URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
+          LAMBDA_IDENTITY: ${{secrets.LAMBDA_IDENTITY}}
           USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
 
       - name: Generate HTML Report
